@@ -8,6 +8,243 @@
     <package name="Timepix">
 
         <!-- ========================================================================= -->
+        <h5schema name="ConfigV1" version="0">
+            <dataset name="config">
+                <attribute name="readoutSpeed"/>
+                <attribute name="triggerMode"/>
+                <attribute name="shutterTimeout"/>
+                <attribute name="dac0Ikrum"/>
+                <attribute name="dac0Disc"/>
+                <attribute name="dac0Preamp"/>
+                <attribute name="dac0BufAnalogA"/>
+                <attribute name="dac0BufAnalogB"/>
+                <attribute name="dac0Hist"/>
+                <attribute name="dac0ThlFine"/>
+                <attribute name="dac0ThlCourse"/>
+                <attribute name="dac0Vcas"/>
+                <attribute name="dac0Fbk"/>
+                <attribute name="dac0Gnd"/>
+                <attribute name="dac0Ths"/>
+                <attribute name="dac0BiasLvds"/>
+                <attribute name="dac0RefLvds"/>
+                <attribute name="dac1Ikrum"/>
+                <attribute name="dac1Disc"/>
+                <attribute name="dac1Preamp"/>
+                <attribute name="dac1BufAnalogA"/>
+                <attribute name="dac1BufAnalogB"/>
+                <attribute name="dac1Hist"/>
+                <attribute name="dac1ThlFine"/>
+                <attribute name="dac1ThlCourse"/>
+                <attribute name="dac1Vcas"/>
+                <attribute name="dac1Fbk"/>
+                <attribute name="dac1Gnd"/>
+                <attribute name="dac1Ths"/>
+                <attribute name="dac1BiasLvds"/>
+                <attribute name="dac1RefLvds"/>
+                <attribute name="dac2Ikrum"/>
+                <attribute name="dac2Disc"/>
+                <attribute name="dac2Preamp"/>
+                <attribute name="dac2BufAnalogA"/>
+                <attribute name="dac2BufAnalogB"/>
+                <attribute name="dac2Hist"/>
+                <attribute name="dac2ThlFine"/>
+                <attribute name="dac2ThlCourse"/>
+                <attribute name="dac2Vcas"/>
+                <attribute name="dac2Fbk"/>
+                <attribute name="dac2Gnd"/>
+                <attribute name="dac2Ths"/>
+                <attribute name="dac2BiasLvds"/>
+                <attribute name="dac2RefLvds"/>
+                <attribute name="dac3Ikrum"/>
+                <attribute name="dac3Disc"/>
+                <attribute name="dac3Preamp"/>
+                <attribute name="dac3BufAnalogA"/>
+                <attribute name="dac3BufAnalogB"/>
+                <attribute name="dac3Hist"/>
+                <attribute name="dac3ThlFine"/>
+                <attribute name="dac3ThlCourse"/>
+                <attribute name="dac3Vcas"/>
+                <attribute name="dac3Fbk"/>
+                <attribute name="dac3Gnd"/>
+                <attribute name="dac3Ths"/>
+                <attribute name="dac3BiasLvds"/>
+                <attribute name="dac3RefLvds"/>
+            </dataset>
+        </h5schema>
+        <!-- ========================================================================= -->
+        <h5schema name="ConfigV2" version="0">
+            <dataset name="config">
+                <attribute name="readoutSpeed"/>
+                <attribute name="triggerMode"/>
+                <attribute name="timepixSpeed"/>
+                <attribute name="dac0Ikrum"/>
+                <attribute name="dac0Disc"/>
+                <attribute name="dac0Preamp"/>
+                <attribute name="dac0BufAnalogA"/>
+                <attribute name="dac0BufAnalogB"/>
+                <attribute name="dac0Hist"/>
+                <attribute name="dac0ThlFine"/>
+                <attribute name="dac0ThlCourse"/>
+                <attribute name="dac0Vcas"/>
+                <attribute name="dac0Fbk"/>
+                <attribute name="dac0Gnd"/>
+                <attribute name="dac0Ths"/>
+                <attribute name="dac0BiasLvds"/>
+                <attribute name="dac0RefLvds"/>
+                <attribute name="dac1Ikrum"/>
+                <attribute name="dac1Disc"/>
+                <attribute name="dac1Preamp"/>
+                <attribute name="dac1BufAnalogA"/>
+                <attribute name="dac1BufAnalogB"/>
+                <attribute name="dac1Hist"/>
+                <attribute name="dac1ThlFine"/>
+                <attribute name="dac1ThlCourse"/>
+                <attribute name="dac1Vcas"/>
+                <attribute name="dac1Fbk"/>
+                <attribute name="dac1Gnd"/>
+                <attribute name="dac1Ths"/>
+                <attribute name="dac1BiasLvds"/>
+                <attribute name="dac1RefLvds"/>
+                <attribute name="dac2Ikrum"/>
+                <attribute name="dac2Disc"/>
+                <attribute name="dac2Preamp"/>
+                <attribute name="dac2BufAnalogA"/>
+                <attribute name="dac2BufAnalogB"/>
+                <attribute name="dac2Hist"/>
+                <attribute name="dac2ThlFine"/>
+                <attribute name="dac2ThlCourse"/>
+                <attribute name="dac2Vcas"/>
+                <attribute name="dac2Fbk"/>
+                <attribute name="dac2Gnd"/>
+                <attribute name="dac2Ths"/>
+                <attribute name="dac2BiasLvds"/>
+                <attribute name="dac2RefLvds"/>
+                <attribute name="dac3Ikrum"/>
+                <attribute name="dac3Disc"/>
+                <attribute name="dac3Preamp"/>
+                <attribute name="dac3BufAnalogA"/>
+                <attribute name="dac3BufAnalogB"/>
+                <attribute name="dac3Hist"/>
+                <attribute name="dac3ThlFine"/>
+                <attribute name="dac3ThlCourse"/>
+                <attribute name="dac3Vcas"/>
+                <attribute name="dac3Fbk"/>
+                <attribute name="dac3Gnd"/>
+                <attribute name="dac3Ths"/>
+                <attribute name="dac3BiasLvds"/>
+                <attribute name="dac3RefLvds"/>
+                <attribute name="driverVersion"/>
+                <attribute name="firmwareVersion"/>
+                <attribute name="pixelThreshSize"/>
+                <attribute name="pixelThresh"/>
+                <attribute name="chip0Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip1Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip2Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip3Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip0ID"/>
+                <attribute name="chip1ID"/>
+                <attribute name="chip2ID"/>
+                <attribute name="chip3ID"/>
+                <attribute name="chipCount"/>
+            </dataset>
+        </h5schema>
+        <!-- ========================================================================= -->
+        <h5schema name="ConfigV3" version="0">
+            <dataset name="config">
+                <attribute name="readoutSpeed"/>
+                <attribute name="timepixMode"/>
+                <attribute name="timepixSpeed"/>
+                <attribute name="dac0Ikrum"/>
+                <attribute name="dac0Disc"/>
+                <attribute name="dac0Preamp"/>
+                <attribute name="dac0BufAnalogA"/>
+                <attribute name="dac0BufAnalogB"/>
+                <attribute name="dac0Hist"/>
+                <attribute name="dac0ThlFine"/>
+                <attribute name="dac0ThlCourse"/>
+                <attribute name="dac0Vcas"/>
+                <attribute name="dac0Fbk"/>
+                <attribute name="dac0Gnd"/>
+                <attribute name="dac0Ths"/>
+                <attribute name="dac0BiasLvds"/>
+                <attribute name="dac0RefLvds"/>
+                <attribute name="dac1Ikrum"/>
+                <attribute name="dac1Disc"/>
+                <attribute name="dac1Preamp"/>
+                <attribute name="dac1BufAnalogA"/>
+                <attribute name="dac1BufAnalogB"/>
+                <attribute name="dac1Hist"/>
+                <attribute name="dac1ThlFine"/>
+                <attribute name="dac1ThlCourse"/>
+                <attribute name="dac1Vcas"/>
+                <attribute name="dac1Fbk"/>
+                <attribute name="dac1Gnd"/>
+                <attribute name="dac1Ths"/>
+                <attribute name="dac1BiasLvds"/>
+                <attribute name="dac1RefLvds"/>
+                <attribute name="dac2Ikrum"/>
+                <attribute name="dac2Disc"/>
+                <attribute name="dac2Preamp"/>
+                <attribute name="dac2BufAnalogA"/>
+                <attribute name="dac2BufAnalogB"/>
+                <attribute name="dac2Hist"/>
+                <attribute name="dac2ThlFine"/>
+                <attribute name="dac2ThlCourse"/>
+                <attribute name="dac2Vcas"/>
+                <attribute name="dac2Fbk"/>
+                <attribute name="dac2Gnd"/>
+                <attribute name="dac2Ths"/>
+                <attribute name="dac2BiasLvds"/>
+                <attribute name="dac2RefLvds"/>
+                <attribute name="dac3Ikrum"/>
+                <attribute name="dac3Disc"/>
+                <attribute name="dac3Preamp"/>
+                <attribute name="dac3BufAnalogA"/>
+                <attribute name="dac3BufAnalogB"/>
+                <attribute name="dac3Hist"/>
+                <attribute name="dac3ThlFine"/>
+                <attribute name="dac3ThlCourse"/>
+                <attribute name="dac3Vcas"/>
+                <attribute name="dac3Fbk"/>
+                <attribute name="dac3Gnd"/>
+                <attribute name="dac3Ths"/>
+                <attribute name="dac3BiasLvds"/>
+                <attribute name="dac3RefLvds"/>
+                <attribute name="dacBias"/>
+                <attribute name="flags"/>
+                <attribute name="driverVersion"/>
+                <attribute name="firmwareVersion"/>
+                <attribute name="pixelThreshSize"/>
+                <attribute name="pixelThresh"/>
+                <attribute name="chip0Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip1Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip2Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip3Name" rank="1">
+                    <tag name="vlen"/>
+                </attribute>
+                <attribute name="chip0ID"/>
+                <attribute name="chip1ID"/>
+                <attribute name="chip2ID"/>
+                <attribute name="chip3ID"/>
+                <attribute name="chipCount"/>
+            </dataset>
+        </h5schema>
+
+        <!-- ========================================================================= -->
     
         <h5schema name="DataV1" version="0">
 
